# microMLP

./: .gitignore  README.md  pyproject.toml  setup.py
tensor/: __init__.py
tensor/csrc/: bindings.cpp  tensor.cu  tensor.h
